Fix issue with code block wrapping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,7 @@
     --color-danger: 178 54 37;
 
     --nav-height: 80px;
-    --sidebar-width: 12rem;
+    --sidebar-width: 18rem;
   }
 
   /***************/
@@ -318,7 +318,7 @@
   }
 
   .prose code {
-    @apply bg-base-content/5 rounded px-1 py-[2px] whitespace-nowrap;
+    @apply bg-base-content/5 rounded px-1 py-[2px];
   }
 
   .prose ul,
